Fix example avatars on Safari (#1326)

--- a/examples/nextjs-comments-tiptap/src/components/Avatars.module.css
+++ b/examples/nextjs-comments-tiptap/src/components/Avatars.module.css
@@ -37,5 +37,7 @@
 }
 
 .avatar_picture {
+  width: 100%;
+  height: 100%;
   border-radius: 9999px;
 }
